[tool.poetry]
name = "botgram"
version = "0.1.0a0"
description = "Asyncio Telegram Bot SDK"
authors = ["Denis Malin <denis@malina.page>"]
license = "MIT License"

packages = [
    { include = "botgram" }
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
aiohttp = ">=3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
